--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -1,4 +1,4 @@
-@import url(variable.css);
+@import url(./variable.css);
 
 html,
 body,
@@ -84,3 +84,52 @@ body {
   columns: 3;
 }
 
+h3 {
+
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+}
+p {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
+img {
+  box-sizing: border-box;
+  width: 85%;
+  padding: 5px;
+      align-items: center;
+}
+
+.card {
+  box-shadow: 10px 7px 5px var(--item-shadow);
+  border-radius: 3rem;
+  width: 26%;
+  height: 35rem;
+  font-size: 5rem;
+  background-color: var(--item-body);
+  margin: 3rem auto;
+  align-items: center;
+  border: 0.3rem solid var(--item-button-border);
+}
+.card-image {
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      box-sizing: border-box;
+}
+
+.col {
+  width: 30%;
+  justify-content: space-evenly;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-evenly;
+  margin: 3% top;
+}
