--- a/style.css
+++ b/style.css
@@ -1,17 +1,23 @@
+:root {
+ --Orange: #da942b;
+ --Red: #d73838;
+ --Ice: #388fd7;
+ --Blue: #3852d7;
+ --primary:var(--Orange) 
+ --secondary:v  
+
+}
+
 .summer {
-  background-color: #FFA500;
-  color: #fff;
-  box-shadow: 0 0 10px rgba(255, 165, 0, 0.5);
+--primary: var(--Blue)
+--secondary: var(--Ice)
 }
 
 .winter {
-  background-color: #87CEEB;
-  color: #fff;
-  box-shadow: 0 0 10px rgba(135, 206, 250, 0.5);
 }
-
 body {
   font-family: 'Arial', sans-serif;
+  background-color: var(--primary);
 }
 
 .theme {
@@ -26,8 +32,7 @@ body {
 
 .cardcontainer {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  
   gap: 20px;
   margin: 20px;
 }
